--- a/src/styles.css
+++ b/src/styles.css
@@ -3,28 +3,28 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 10px;
-  background-color: #f0f0f0;
+  background-color: #B1B89F;
   color: #333;
 }
 
 h3 {
   margin-top: 0;
   padding: 5px;
-  background-color: #e0e0e0;
+  background-color: #9CAA88;
   border-radius: 4px;
 }
 
 button {
   padding: 5px 10px;
-  border: none;
+  border-color: #dba69e;
   border-radius: 4px;
-  background-color: #0078d7;
-  color: white;
+  background-color: #EECFCA;
+  color: black;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #0063b1;
+  background-color: #EECFCA;
 }
 
 button:disabled {
@@ -61,7 +61,7 @@ input {
 
 /* Connection frame */
 .connection-frame {
-  background-color: #ffffff;
+  background-color: #DCE2D8;
   border-radius: 8px;
   padding: 10px;
   margin-bottom: 10px;
@@ -84,7 +84,7 @@ input {
 
 /* Chat frame */
 .chat-frame {
-  background-color: #ffffff;
+  background-color: #DCE2D8;
   border-radius: 8px;
   padding: 10px;
   display: flex;
@@ -94,10 +94,12 @@ input {
 }
 
 .message-display {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
   overflow-y: auto;
   padding: 10px;
-  background-color: #ffffff;
+  background-color: #DCE2D8;
   border: 1px solid #ddd;
   border-radius: 4px;
   margin-bottom: 10px;
@@ -118,7 +120,7 @@ input {
 
 /* Peers frame */
 .peers-frame {
-  background-color: #ffffff;
+  background-color: #DCE2D8;
   border-radius: 8px;
   padding: 10px;
   margin-bottom: 10px;
@@ -134,7 +136,7 @@ input {
 
 /* Stats frame */
 .stats-frame {
-  background-color: #ffffff;
+  background-color: #DCE2D8;
   border-radius: 8px;
   padding: 10px;
   margin-bottom: 10px;
@@ -156,7 +158,7 @@ input {
 
 /* Educational panel */
 .edu-frame {
-  background-color: #ffffff;
+  background-color: #DCE2D8;
   border-radius: 8px;
   padding: 10px;
   flex-grow: 1;
@@ -167,7 +169,7 @@ input {
   height: 200px;
   overflow-y: auto;
   padding: 10px;
-  background-color: #f8f8f8;
+  background-color: #DCE2D8;
   border: 1px solid #ddd;
   border-radius: 4px;
   font-size: 14px;
